# base-dex-radar

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/agents/: bet-reviewer.md  grant-reviewer.md  scope-builder.md  test-runner.md
.claude/skills/bet-kickoff/: SKILL.md
.claude/skills/ship-or-cut/: SKILL.md
backend/: Dockerfile  pyproject.toml
backend/src/dex_radar/: api.py  cache.py  cuda_bellman_ford.py  liquidity_mapper.py  models.py  opportunity_detector.py  path_finder.py  pool_reader.py  price_engine.py  schemas.py
backend/tests/: test_api.py  test_opportunity_detector.py  test_path_finder.py  test_pool_reader.py  test_price_engine.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/liquidity/: page.tsx
frontend/src/app/opportunities/: page.tsx
frontend/src/app/route/: page.tsx
frontend/src/components/: LiquidityDepthChart.tsx  Nav.tsx  OpportunityFeed.tsx  PriceTable.tsx  RouteVisualizer.tsx
frontend/src/lib/: api.ts
