[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dex-radar"
version = "0.1.0"
description = "AI-powered DEX intelligence platform for Base"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "web3>=6.18.0",
    "httpx>=0.27.0",
    "numpy>=1.26.4",
    "pydantic>=2.7.0",
    "aiosqlite>=0.20.0",
    "cachetools>=5.3.0",
]
[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.7", "ruff>=0.4.4"]
[tool.setuptools.packages.find]
where = ["src"]
[tool.ruff]
line-length = 100
